; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_clock.c_clock_get_boottime_microtime.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_clock.c_clock_get_boottime_microtime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@clock_boottime = common dso_local global i64 0, align 8
@clock_boottime_usec = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clock_get_boottime_microtime(i64* %0, i64* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  store i64* %0, i64** %3, align 8
  store i64* %1, i64** %4, align 8
  %6 = call i32 (...) @splclock()
  store i32 %6, i32* %5, align 4
  %7 = call i32 (...) @clock_lock()
  %8 = load i64, i64* @clock_boottime, align 8
  %9 = load i64*, i64** %3, align 8
  store i64 %8, i64* %9, align 8
  %10 = load i64, i64* @clock_boottime_usec, align 8
  %11 = load i64*, i64** %4, align 8
  store i64 %10, i64* %11, align 8
  %12 = call i32 (...) @clock_unlock()
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @splx(i32 %13)
  ret void
}

declare dso_local i32 @splclock(...) #1

declare dso_local i32 @clock_lock(...) #1

declare dso_local i32 @clock_unlock(...) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
